--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <button class="btn1">Rock</button>
     <button class="btn2">Paper</button>
     <button class="btn3">Scissors</button>
+    <div id="scoreboard">
+        <span>user</span>  <span id="user-score">0</span>:<span id="pc-score">0</span> <span>pc</span>
+    </div>
+    <div id="result"></div>
 </body>
 
 </html>
